2009-08-16 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 6.2.0

2009-07-26 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 6.1.2

2009-07-11 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 6.1.0

2009-03-25 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Updated to reflect change to python2.6

2008-02-26 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Source path changed, updated

2008-08-31 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 6.0.3

2008-08-05 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 6.0.2
	* Added man page from Debian's .deb package