@@ -1,3 +1,6 @@
+2010-06-26 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+	* FS#19737 fixed in trunk
+
 2009-08-16 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 	* Update to major release 6.2.0
 
